--- a/environment.yml
+++ b/environment.yml
@@ -114,10 +114,10 @@ dependencies:
   - pyparsing=3.1.2
   - pysam=0.22.1
   - pysocks=1.7.1
-  - python=3.12.3
+  - python=3.10.14
   - python-dateutil=2.9.0
   - python-igraph=0.11.5
-  - python_abi=3.12
+  - python_abi=3.10
   - pyyaml=6.0.1
   - qhull=2020.2
   - ragtag=2.1.0
@@ -140,6 +140,7 @@ dependencies:
   - tk=8.6.13
   - typing_extensions=4.12.2
   - tzdata=2024a
+  - unicodedata2=15.1.0
   - urllib3=2.2.2
   - vg=1.40.0
   - wfmash=0.16.0
