--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - alsa-lib=1.2.11
   - arpack=3.9.1
   - bc=1.07.1
   - bcftools=1.20
@@ -15,6 +16,7 @@ dependencies:
   - bzip2=1.0.8
   - c-ares=1.32.0
   - ca-certificates=2024.7.4
+  - cairo=1.18.0
   - certifi=2024.7.4
   - cffi=1.16.0
   - charset-normalizer=3.3.2
@@ -23,15 +25,27 @@ dependencies:
   - colormath=3.0.0
   - contourpy=1.2.1
   - cycler=0.12.1
+  - edlib=1.3.9
+  - expat=2.6.2
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
   - fonttools=4.53.1
   - freetype=2.12.1
   - future=1.0.0
   - gfaffix=0.1.5
   - gfatools=0.5
+  - giflib=5.2.2
   - glpk=5.0
   - gmp=6.3.0
+  - graphite2=1.3.13
   - gsl=2.7
   - h2=4.1.0
+  - harfbuzz=8.5.0
   - hifiasm=0.19.9
   - hpack=4.0.0
   - htslib=1.20
@@ -42,6 +56,8 @@ dependencies:
   - idna=2.10
   - importlib-metadata=8.0.0
   - intervaltree=3.1.0
+  - irissv=1.0.5
+  - jasminesv=1.1.5
   - jinja2=3.1.4
   - k8=0.2.5
   - keyutils=1.6.1
@@ -55,6 +71,7 @@ dependencies:
   - libbrotlidec=1.1.0
   - libbrotlienc=1.1.0
   - libcblas=3.9.0
+  - libcups=2.3.3
   - libcurl=8.8.0
   - libdeflate=1.20
   - libedit=3.1.20191231
@@ -64,6 +81,7 @@ dependencies:
   - libgcc-ng=14.1.0
   - libgfortran-ng=14.1.0
   - libgfortran5=14.1.0
+  - libglib=2.80.2
   - libgomp=14.1.0
   - libiconv=1.17
   - libjemalloc=5.3.0
@@ -98,14 +116,18 @@ dependencies:
   - networkx=3.3
   - numpy=2.0.0
   - odgi=0.8.6
+  - openjdk=22.0.1
   - openjpeg=2.5.2
   - openssl=3.3.1
   - packaging=24.1
+  - pcre2=10.43
   - perl=5.32.1
   - pggb=0.5.3
   - pigz=2.8
   - pillow=10.3.0
   - pip=24.0
+  - pixman=0.43.2
+  - psutil=6.0.0
   - pthread-stubs=0.4
   - pybind11=2.13.1
   - pybind11-global=2.13.1
@@ -120,6 +142,7 @@ dependencies:
   - python_abi=3.10
   - pyyaml=6.0.1
   - qhull=2020.2
+  - racon=1.5.0
   - ragtag=2.1.0
   - readline=8.2
   - requests=2.32.3
@@ -132,6 +155,7 @@ dependencies:
   - simplejson=3.19.2
   - six=1.16.0
   - smoothxg=0.7.4
+  - sniffles=2.4
   - sortedcontainers=2.4.0
   - spectra=0.0.11
   - tabix=1.11
@@ -142,11 +166,28 @@ dependencies:
   - tzdata=2024a
   - unicodedata2=15.1.0
   - urllib3=2.2.2
+  - vcfbub=0.1.1
   - vg=1.40.0
   - wfmash=0.16.0
   - wheel=0.43.0
+  - xorg-fixesproto=5.0
+  - xorg-inputproto=2.3.2
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.1.1
+  - xorg-libsm=1.2.4
+  - xorg-libx11=1.8.9
   - xorg-libxau=1.0.11
   - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxi=1.7.10
+  - xorg-libxrender=0.9.11
+  - xorg-libxt=1.3.0
+  - xorg-libxtst=1.2.3
+  - xorg-recordproto=1.14.2
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
   - xz=5.2.6
   - yaml=0.2.5
   - zipp=3.19.2
