--- a/environment.yml
+++ b/environment.yml
@@ -59,6 +59,7 @@ dependencies:
   - h2=4.1.0
   - harfbuzz=8.5.0
   - hifiasm=0.19.9
+  - hmmer=3.4
   - hpack=4.0.0
   - htslib=1.20
   - humanfriendly=10.0
@@ -147,6 +148,7 @@ dependencies:
   - mdurl=0.1.2
   - minigraph=0.21
   - minimap2=2.28
+  - miniprot=0.13
   - mpg123=1.32.6
   - multiqc=1.17
   - mummer=3.23
